# bot

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  search.ini  search_bot.go
db/: db.go
lib/: lib.go
model/: bot.go  model.go  types.go
